# libFL

./: CMakeLists.txt  Makefile
demo/: avgDist.cpp  bow.cpp  clustering.cpp  createDataset.cpp  filteringImage.cpp  firstExp.cpp  genericList.cpp  imageHistogram.cpp  individualBOWs.cpp  knn.cpp  mergedFeats.cpp  objectSimilarity.cpp  testMatrix.cpp
include/: bagOfVisualWords.h  featureExtractor.h  featureVector.h  hog.h  iftPoi.h  image.h  kNearestNeighbours.h  matrix.h  matrixUtil.h  morphology.h  sampling.h
src/: bagOfVisualWords.cpp  featureExtractor.cpp  featureVector.cpp  file.cpp  hog.cpp  iftPoi.cpp  image.cpp  kNearestNeightbours.cpp  matrix.cpp  morphology.cpp  sampling.cpp
